Add path npm. Make public folder, put js files. For SSE, use compression npm instead sse npm. SSE ping test complete.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "eventAnimation.js",
   "dependencies": {
+    "compression": "^1.7.3",
     "express": "^4.16.3",
+    "path": "^0.12.7",
+    "server-sent-events": "^1.0.1",
     "sse": "0.0.8"
   },
   "devDependencies": {},
